# xendra-cards-generator

./: .gitignore  build.bat  cards_data.xlsx  cards_generator.spec  config.ini  draw_multiline_text.py  highlights.json  highlights.xlsx  load_config.py  main.py  pyproject.toml  requirements.txt  test.py  text_box.py
sections/: cards.py  settings.py
tools/: create_card.py  draw_multiline_text.py  fonts.py  get_max_text_length.py  load_config.py  text_box.py  theme.py  thread_function.py  update_progress_bar.py
